--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Brandon Casey <brandonocasey@gmail.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "npm-package-arg": "^11.0.1"
+    "npm-package-arg": "^11.0.1",
+    "semver": "^7.5.4"
   }
 }
